--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 ## WARNING! THIS COMMAND WILL ERASE ALL DATA
-## UNCOMMENT FOR NEW STAYTUS INSTALLATION
+## USE FOR NEW STAYTUS INSTALLATIONS ONLY
 # CLEAN_INSTALL=1
 #############################################
 
