--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-## WARNING! THIS COMMAND WILL ERASE ALL DATA
+## WARNING! THIS VARIABLE WILL ERASE ALL DATA
 ## USE FOR NEW STAYTUS INSTALLATIONS ONLY
 # CLEAN_INSTALL=1
 #############################################
